hphp/test/slow/ir_inlining/unset.php.expectf

Fatal error: Failure to resolve undefined class Dtor in %s/test/slow/ir_inlining/unset.php on line 27
